--- a/Search Backend/requirements.txt
+++ b/Search Backend/requirements.txt
@@ -4,7 +4,8 @@ pydantic>=2.6.0
 pydantic-settings>=2.1.0
 sqlmodel>=0.0.14
 asyncpg>=0.29.0
-pgvector>=0.2.4
+pgvector
+openai>=0.2.4
 langchain-text-splitters>=0.0.1
 sentence-transformers>=2.3.1
 python-multipart
