--- a/Firefox Plugin/manifest.json
+++ b/Firefox Plugin/manifest.json
@@ -6,7 +6,8 @@
     "permissions": [
         "activeTab",
         "storage",
-        "scripting"
+        "scripting",
+        "identity"
     ],
     "action": {
         "default_popup": "popup.html",
