--- a/Storage/docker-compose.yml
+++ b/Storage/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: pgvector/pgvector:pg16
-    container_name: bookmark_db
+    container_name: bookmark_db_dev
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-bookmark_user}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
@@ -13,7 +13,7 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-bookmark_user} -d ${POSTGRES_DB:-bookmarks_db}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-bookmark_user} -d ${POSTGRES_DB:-bookmarks_db}" ]
       interval: 5s
       timeout: 5s
       retries: 5
