Feat: OAuth2 auth, Sidebar Markdown & Search improvements
- Implemented Google OAuth2 via Firefox Identity API
- Added Markdown rendering to Sidebar chat
- Fixed Sidebar auth context and search result duplication
- Configured backend to load .env variables
- Updated README and fixed MV3 manifest warning

--- a/Firefox Plugin/manifest.json
+++ b/Firefox Plugin/manifest.json
@@ -14,8 +14,7 @@
         "default_title": "Smart Bookmark Manager"
     },
     "options_ui": {
-        "page": "options.html",
-        "browser_style": true
+        "page": "options.html"
     },
     "sidebar_action": {
         "default_panel": "sidebar.html",
