feat: add local signing script, harden plugin security (v1.0.7)
- chore: create assemble_and_sign.ps1 for automated packaging
- fix: MV3 compliance and data_collection policy
- fix: remove unsafe innerHTML usage in Readability/UI scripts
- docs: update README.md with artifact download link

--- a/Firefox Plugin/manifest.json
+++ b/Firefox Plugin/manifest.json
@@ -1,10 +1,16 @@
 {
     "manifest_version": 3,
     "name": "Smart Bookmark Manager",
-    "version": "1.0",
+    "version": "1.0.7",
     "browser_specific_settings": {
         "gecko": {
-            "id": "smart-bookmark-manager@antigravity.local"
+            "id": "smart-bookmark-manager@antigravity.local",
+            "data_collection_permissions": {
+                "required": [
+                    "none"
+                ],
+                "optional": []
+            }
         }
     },
     "description": "AI-powered personal knowledge base for your bookmarks.",
